--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "copy-styles": "cp -r src/style lib",
     "copy-files": "npm run copy-flow && npm run copy-styles",
     "clean": "nwb clean-module && npm clean-demo",
-    "start": "nwb serve-react-demo",
+    "start": "./node_modules/http-server/bin/http-server --cors='*' & nwb serve-react-demo",
     "test": "npm run flow",
     "flow": "flow",
     "precommit": "npm run flow",
@@ -18,6 +18,7 @@
     "prettier": "prettier --write 'src/**/*.js' 'demo/src/**/*.js'"
   },
   "dependencies": {
+    "http-server": "^0.11.1",
     "lodash": "^4.17.10",
     "pdfjs-dist": "2.0.489",
     "react-pointable": "^1.1.1",
